Use mysql module install mysql-server

--- a/templates/database.yml.erb
+++ b/templates/database.yml.erb
@@ -46,21 +46,8 @@
 production:
   database: dashboard_production
   username: dashboard
-  password:
+  password: <%=@db_password%>
   encoding: utf8
   adapter: mysql
 
-development:
-  database: dashboard_development
-  username: dashboard
-  password:
-  encoding: utf8
-  adapter: mysql
-
-test:
-  database: dashboard_test
-  username: dashboard
-  password:
-  encoding: utf8
-  adapter: mysql
 
