Git ate my commit.

--- a/templates/database.yml.erb
+++ b/templates/database.yml.erb
@@ -44,7 +44,7 @@
 # be "utf8".
 # 
 production:
-  database: dashboard_production
+  database: dashboard
   username: dashboard
   password: <%=@db_password%>
   encoding: utf8
