--- a/templates/database.yml.erb
+++ b/templates/database.yml.erb
@@ -46,7 +46,7 @@
 production:
   database: dashboard
   username: dashboard
-  password: <%=@db_password%>
+  password: <%=@dashboard_password%>
   encoding: utf8
   adapter: mysql
 
